cabal-version:       >=1.10
name:                essentials-of-compilation
version:             0.1.0.0
license-file:        LICENSE
author:              waynee95
maintainer:          larsericmarquardt@mail.de
build-type:          Simple

executable essentials-of-compilation
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  -- hs-source-dirs:
  default-language:    Haskell2010
